apps/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: linkding
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-2
      containers:
        - name: linkding
          image: sissbruecker/linkding:1.47.0-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
          resources:
            requests:
              cpu: "200m"
              memory: "128Mi"
            limits:
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 9090
            initialDelaySeconds: 60
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 9090
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: linkding-data
              mountPath: /etc/linkding/data
      volumes:
        - name: linkding-data
          persistentVolumeClaim:
            claimName: linkding-pvc
