apps/linkding/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkding
  namespace: traefik
spec:
  entryPoints:
    - frp
  routes:
    - match: Host(`links.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: frp-headers
          namespace: traefik
        - name: authelia-auth
          namespace: traefik
      services:
        - name: linkding
          port: 80
          namespace: linkding
